--- a/styles/style.css
+++ b/styles/style.css
@@ -17,12 +17,6 @@
     color: grey;
     font-size: 16px;
 }
-.preferences {
-    z-index: 2;
-}
-.preference-checkboxes {
-    z-index: 2;
-}
 
 .search:focus {
     outline: none;
@@ -40,6 +34,10 @@
 }
 
 .standard-font {
+    font-size: 16px;
+}
+
+.select-button {
     font-size: 16px;
 }
 
