--- a/styles/style.css
+++ b/styles/style.css
@@ -1,8 +1,15 @@
 .top {
     width: 100%;
     background-color: black;
-    overflow: hidden;
     color: white;
+}
+
+.middle {
+    width: 98%;
+    background-color: white;
+    color: black;
+    text-align: center;
+    margin-left: 1%;
 }
 
 .search {
@@ -43,6 +50,32 @@
 
 .select-button:focus {
     background-color: lightskyblue;
+}
+
+#product-list {
+    table-layout: fixed;
+    text-align: center;
+    width: 100%;
+}
+
+.product-item {
+    text-align: center;
+    margin-top: 10px;
+    margin-bottom: 40px;
+    height: 90px;
+}
+
+.product-image {
+    width: 40%;
+    height: 100%;
+}
+
+.bottom {
+    position: absolute;
+    bottom: 10px;
+    display: flex;
+    width: 100%;
+    justify-content: center;
 }
 
 body {
