--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,5 @@
 .top {
+    position: relative;
     width: 100%;
     background-color: black;
     color: white;
@@ -30,6 +31,18 @@
     border-color: cornflowerblue;
 }
 
+.search-column {
+    width: 25%;
+}
+
+.title-column {
+    width: 25%;
+}
+
+.select-column {
+    width: 10%;
+}
+
 .checkbox-select {
     background-color: white;
     position: absolute;
@@ -40,8 +53,9 @@
     padding-right: 10px;
 }
 
-.standard-font {
+.filter-text {
     font-size: 16px;
+    width: 60px;
 }
 
 .select-button {
@@ -49,7 +63,7 @@
 }
 
 .select-button:focus {
-    background-color: lightskyblue;
+    background-color: cornflowerblue;
 }
 
 #product-list {
@@ -61,7 +75,7 @@
 .product-item {
     text-align: center;
     margin-top: 10px;
-    margin-bottom: 40px;
+    margin-bottom: 60px;
     height: 90px;
 }
 
@@ -76,6 +90,15 @@
     display: flex;
     width: 100%;
     justify-content: center;
+}
+
+#cart {
+    position: absolute;
+    width: auto;
+    height: 60%;
+    right: 4%;
+    bottom: 20%;
+    top: 20%;
 }
 
 body {
